# my-tds-project1

./: .gitignore  LICENSE  main.py  project-tds-virtual-ta-promptfoo.yaml  pyproject.toml  qa_pipeline.py  run_scrapers.py
scrape/: scrape_discourse.py
vectorstore/: index.pkl
